linked first page to form, pushed to url database, not redirected

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-  <% include ../partials/_header %>
+  <% include ./partials/_header %>
   </head>
-
-    <body>
-
+    <body style = "font-size:20px; padding:50px">
       <table>
 
       <table border cellpadding="1">
@@ -26,7 +24,7 @@
         <br>
         <br>
         <br>
-        <a href=/shortenLink/ >You can shorten your URL too!</a>
+        <a href=/urls/new >You can shorten your URL too!</a>
         <!-- <%= link_to(shortenLink,/shortenLink/) %> -->
 
 
