--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -2,12 +2,11 @@
   <div class="container-fluid">
 
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">Shortr</a>
+      <a class="navbar-brand" href="/urls">Littlr</a>
     </div>
 
     <ul class="nav navbar-nav">
-      <li><a href="/">Home</a></li>
-      <li><a href="/about">About</a></li>
+      <a href="/urls">About</a>
     </ul>
 
   </div>
