CSS added in ejs files, partials for headers

--- a/views/partials/_header3.ejs
+++ b/views/partials/_header3.ejs
@@ -1,10 +1,10 @@
 <style type = "text/css">
 
 a.larger:link {
-  font-size: 165px;
+  font-size: 35px;
   position: fixed;
-  top: -3%;
-  left: 9%;
+  top: 22%;
+  left: 36.2%;
   text-decoration: none;
 }
 a.larger:visited{color: #fff; background: #fff; font-weight: bold;}
@@ -13,8 +13,8 @@ a.larger:hover {color: #000; background: none; font-weight: bolder;}
 
 </style>
 
-      <p>Make</p>
-      <a class = "larger" href="/urls/new">Little</a>
+      <p>Already</p>
+      <a class = "larger" href="/urls">Littlst</a>
 
 
 
