--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -1,20 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head></head>
+<style type = "text/css">
 
-  <body style="font-size:20px; padding:50px;">
+body {
+  background-color: #C7F3F3;
+  font: 14px/24px "Source Code Pro", Inconsolata, "Lucida Console", Terminal, "Courier New", Courier;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 
-    <% include partials/_header %>
 
-    <form action="/urls" method="POST" style="margin:35px;">
+content {
+  background: #fff;
+  border-radius: 6px;
+  color: #000;
+  display: table;
+  font: 14px/24px "Source Code Pro", Inconsolata, "Lucida Console", Terminal, "Courier New", Courier;
+  padding: 20px 100px;
+  text-align: center;
+}
 
-      <label for="longURL">Enter a URL:</label>
-      <input id="longURL" type="text" name="longURL" placeholder="http://" style="width: 300px">
-      <input type="submit" value="Submit">
+table {
+    border-spacing: 0.5rem;
+    border-collapse: separate;
 
+a.small:link {
+  font-size: 165px;
+  position: fixed;
+  top: -18%;
+  left: 9%;
+  text-decoration: none;
+}
+
+a.small:visited{color: #000; background: #000; font-weight: bold;}
+a.small:active {color: #000; background: #000; font-weight: bold;}
+a.small:hover {color: #fff; background: none; font-weight: bolder;}
+
+}
+
+</style>
+
+<% include ./partials/_header2 %>
+
+  <content>
+    <form action="/urls" method="POST">
+     <br>
+      <label for="longURL"></label>
+      <input id="longURL" type="text" name="longURL" value = "http://" style="width: 300px">
+      <input type="submit" value="Littlr">
+
+      <br>
+      <br>
     </form>
+  </content>
 
-  </body>
 
 </html>
