--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,20 +1,29 @@
 <style type = "text/css">
 
-a.larger:link {
-  font-size: 165px;
-  position: fixed;
-  top: -3%;
-  left: 9%;
-  text-decoration: none;
-}
-a.larger:visited{color: #fff; background: #fff; font-weight: bold;}
-a.larger:active {color: #fff; background: #fff; font-weight: bold;}
-a.larger:hover {color: #000; background: none; font-weight: bolder;}
+  a.larger:link {
+    font-size: 165px;
+    position: fixed;
+    top: -3%;
+    left: 9%;
+    text-decoration: none;
+  }
+
+  a.larger:visited {
+    color: #fff; background: #fff; font-weight: bold;
+  }
+
+  a.larger:active {
+    color: #fff; background: #fff; font-weight: bold;
+  }
+
+  a.larger:hover {
+    color: #000; background: none; font-weight: bolder;
+  }
 
 </style>
 
-      <p>Make</p>
-      <a class = "larger" href="/urls/new">Little</a>
+<p>Make</p>
+<a class = "larger" href="/urls/new">Little</a>
 
 
 
