--- a/views/partials/_header2.ejs
+++ b/views/partials/_header2.ejs
@@ -1,20 +1,29 @@
 <style type = "text/css">
 
-a.larger:link {
-  font-size: 100px;
-  position: fixed;
-  top: 7%;
-  left: 17%;
-  text-decoration: none;
-}
-a.larger:visited{color: #fff; background: #fff; font-weight: bold;}
-a.larger:active {color: #fff; background: #fff; font-weight: bold;}
-a.larger:hover {color: #000; background: none; font-weight: bolder;}
+  a.larger:link {
+    font-size: 100px;
+    position: fixed;
+    top: 7%;
+    left: 17%;
+    text-decoration: none;
+  }
+
+  a.larger:visited {
+    color: #fff; background: #fff; font-weight: bold;
+  }
+
+  a.larger:active {
+    color: #fff; background: #fff; font-weight: bold;
+  }
+
+  a.larger:hover {
+    color: #000; background: none; font-weight: bolder;
+  }
 
 </style>
 
-      <p>Getting</p>
-      <a class = "larger" href="/urls">Littlr</a>
+<p>Getting</p>
+<a class = "larger" href="/urls">Littlr</a>
 
 
 
