added 404 page, moved all functions to mongo and altered server to call functions from module

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -61,14 +61,18 @@
       <table>
         <tr></tr>
         <tr>
-          <% for (var i in urls) { %>
-            <td><%= i %></td> <td><%= urls[i] %></td>
-            <td><a class = "edit" href=/urls/<%= i %>>Edit</a></td>
-            <td><form method="POST" action=/urls/<%= i %>?_method=DELETE>
-            <button type="submit"> × </button>
-            </form></td>
+
+          <% for (var url of urls) { %>
+          <td><%= url.shortURL %> </td>
+          <td> <%= url.longURL %> </td>
+          <td><a class = "edit" href=/urls/<%= url.shortURL %>>Edit</a></td>
+          <td><form method="POST" action=/urls/<%= url.shortURL %>?_method=DELETE>
+          <button type="submit"> × </button>
+          </form></td>
           <tr></tr>
           <% }; %>
+
+
         </tr>
       </table>
     </content
