--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -45,7 +45,7 @@
     <content>
       <form action=/urls/<%= shortURL%>?_method=PUT method="POST">
         <input id="changedURL" type="text" name="changedURL" value = <%= longURL %> style="width: 300px">
-        <button type="submit"> Modify </button>
+        <button type="submit"> Change </button>
       </form>
 
       <a class = "original" href = "<%= longURL %>" ><%= shortURL %></a>
