--- a/views/partials/_header4.ejs
+++ b/views/partials/_header4.ejs
@@ -1,10 +1,10 @@
 <style type = "text/css">
 
   a.larger:link {
-    font-size: 35px;
+    font-size: 300px;
     position: fixed;
-    top: 22%;
-    left: 36.7%;
+    top: -190px;
+    right: -400px;
     text-decoration: none;
   }
 
@@ -17,13 +17,20 @@
   }
 
   a.larger:hover {
-    color: #000; background: none; font-weight: bolder;
+    color: #faf9e5 ; background: none; font-weight: bolder;
   }
 
+  p {
+    color: #fff;
+    position: fixed;
+    bottom: 180px;
+    right: 190px;
+  }
 </style>
 
-<p>Already</p>
-<a class = "larger" href="/urls">Littlst</a>
+<p>Not Found Make one</p>
+
+<a class = "larger" href="/urls/new">404</a>
 
 
 
