--- a/views/partials/_header4.ejs
+++ b/views/partials/_header4.ejs
@@ -17,7 +17,7 @@
   }
 
   a.larger:hover {
-    color: #faf9e5 ; background: none; font-weight: bolder;
+    color: #641882 ; background: none; font-weight: bolder;
   }
 
   p {
